@@ -991,7 +991,7 @@ span#navigation a#prev {
 
 .attachments {
    display              : block;
-   padding              : 5px 15px 0 20px;
+   padding              : 10px 15px 0 20px;
 }
 
 
